--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="{{ url_for('static', filename = 'images/favicon.png') }}">
+  <link rel="icon" type="image/png" href="static/images/favicon.png">
   
       <!-- JQuery
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <script src="{{ url_for('static', filename = 'scripts/jquery-3.5.1.min.js') }}"></script>
+  <script src="static/scripts/jquery-3.5.1.min.js"></script>
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="{{ url_for('static', filename = 'styles/normalize.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename = 'styles/skeleton.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename = 'styles/flexButtons.css') }}">
+  <link rel="stylesheet" href="static/styles/normalize.css">
+  <link rel="stylesheet" href="static/styles/skeleton.css">
+  <link rel="stylesheet" href="static/styles/flexButtons.css">
 
 </head>
 <body style = "background-color: rgb(104, 104, 104)">
@@ -54,7 +54,7 @@
     </div>
     <p>
     <h1 id="score">0</h1>
-  <script src="{{ url_for('static', filename = 'scripts/main.js') }}"></script>
+  <script src="static/scripts/main.js"></script>
   
 </body>
 </html>
